# infn-lnl-stage2022-temaE

./: .gitignore  .pep8speaks.yml  README.md  classe.py  compile.py  fondo.root  ideal.py  presentazione.py  pyproject.toml  rand.py  setup.cfg
.github/workflows/: main.yml  pylint.yml
Presentazione/: presentazione.py
Presentazione/Animazioni/: areas.py  photon-interactions.py
src/: classe.py  fondo_2.root  ideal.pxd  ideal.py  ideal.pyi  log.py  pi.pxd  pi.py  rand.py  root.pxd  root.py  spettro.py  stagisti.py
tests/: conftest.py  test_files.py  test_rand.py  test_root.py  test_spettro.py  test_stagisti.py
